# cpp_projects

./: README.md
.github/workflows/: cicd.yml
hangman/: CMakeLists.txt  FileReader.cpp  FileReader.h  Game.cpp  Game.h  GameService.cpp  GameService.h  README.md  State.cpp  State.h  main.cpp  tests.cpp
hangman/assets/: class_diagram.pu  hangman00.txt  hangman01.txt  hangman02.txt  hangman03.txt  hangman04.txt  hangman05.txt  intro.txt  loser.txt  state_machine.pu  winner.txt  words.txt
tictactoe/: Board.cpp  Board.h  CMakeLists.txt  README.md  main.cpp  tests.cpp
